--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -43,7 +43,7 @@
             </div>
 
         <!-- ENTREE -->
-        <div class="entree-francaise entree  repas-francais ">
+        <div class="entree-francaise entree  repas-francais repas ">
                 <h4 class="titre-repas">ENTREES</h4>
                 <div class="border-bottom-titre"></div>
 
