modification après debrief

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -34,7 +34,7 @@
 
     <section id="menu-francaise">
             <div class="palette-menu-titre">
-                    <h3>A la francaise</h3>
+                    <h3>À la francaise</h3>
 
                     <div class="container-hearth">
                         <i class="fa-regular fa-heart icon-regular"></i>
@@ -44,7 +44,7 @@
 
         <!-- ENTREE -->
         <div class="entree-francaise entree  repas-francais repas ">
-                <h4 class="titre-repas">ENTREES</h4>
+                <h4 class="titre-repas">ENTRÉES</h4>
                 <div class="border-bottom-titre"></div>
 
             <article class="btn">
@@ -183,7 +183,7 @@
                 </article>
             </div>
         <div class="plat repas-francais repas">
-            <h4 class="titre-repas">DESSERT</h4>
+            <h4 class="titre-repas">DESSERTS</h4>
             <div class="border-bottom-titre"></div>
 
             <article class="btn">
