--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -46,7 +46,7 @@
 
         <!-- ENTREE -->
         <div class="entree-enchantee repas-enchantee repas">
-            <h4 class="titre-repas">ENTREES</h4>
+            <h4 class="titre-repas">ENTRÉES</h4>
             <div class="border-bottom-titre"></div>
 
             <article class="btn">
@@ -207,7 +207,7 @@
             </div>
         <!-- DESSERT -->
         <div class="dessert-enchantee repas-enchantee repas">
-            <h4 class="titre-repas">DESSERT</h4>
+            <h4 class="titre-repas">DESSERTS</h4>
             <div class="border-bottom-titre"></div>
 
             <article class="btn">
@@ -219,7 +219,7 @@
     
                 <div class="content-display-for-animation">
                         <div class="content-display">
-                            <h4>Glace au caramel brun et sel<span class="dot">...</span> <span class="remove">de</span> <span class="remove-2">Guérande</span>  </h4>
+                            <h4>Glace au caramel brun et sel<span class="dot">...</span> <span class="remove">de</span> <span class="remove-2">Gué...</span>  </h4>
                             <p>18Є</p>
                             
                         </div>
