--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -44,7 +44,7 @@
 
         <!-- ENTREE -->
         <div class="entree repas">
-            <h4 class="titre-repas">ENTREES</h4>
+            <h4 class="titre-repas">ENTRÉES</h4>
             <div class="border-bottom-titre"></div>
 
             <article class="btn">
@@ -183,7 +183,7 @@
                 </article>
             </div>
         <div class="plat repas dessert">
-            <h4 class="titre-repas">DESSERT</h4>
+            <h4 class="titre-repas">DESSERTS</h4>
             <div class="border-bottom-titre"></div>
 
             <article class="btn">
