--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     
                     <div class="container-information">
                         <div class="content-information">
-                            <h4>A la francaise</h4>
+                            <h4>À la francaise</h4>
                             <p>Cité Rouge</p>
                         </div>
 
