rectification debrief font size

--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -44,8 +44,8 @@
 
         <!-- ENTREE -->
         <div class="entree repas-delice repas">
-            <h4 class="titre-repas">ENTRÉES</h4>
-            <div class="border-bottom-titre"></div>
+            <h4 class="titre-repas titre-repas-entree">ENTRÉES</h4>
+            <div class="border-bottom-titre border-entree"></div>
 
             <article class="btn">
                 <div class="container content-1">
