--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -257,11 +257,11 @@
         <h4>ohmyfood</h4>
         <div class="content-footer">
             <i class="fa-solid fa-utensils"></i>
-            <p>Proposer un restaurant</p>
+            <a href="#">Proposer un restaurant</a>
         </div>
         <div class="content-footer">
             <i class="fa-solid fa-handshake-angle"></i>
-            <p>Devenir partenaire</p>
+            <a href="#">Devenir partenaire</a>
         </div>
         
         <div class="content-link">
