--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
         <h4>ohmyfood</h4>
         <div class="content-footer">
             <i class="fa-solid fa-utensils"></i>
-            <p class="p-1">Proposer un restaurant</p>
+            <a class="p-1" href="#">Proposer un restaurant</a>
         </div>
         <div class="content-footer">
             <i class="fa-solid fa-handshake-angle"></i>
-            <p>Devenir partenaire</p>
+            <a href="#">Devenir partenaire</a>
         </div>
         
         <div class="content-link">
