--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -92,7 +92,7 @@
                     </div>
                         <div class="container content-3">
                             
-                                    <h3>Homard et espuma de...</h3>
+                                    <h3>Homard et espuma de <span class="dot">...</span> <span class="remove">potiron</span></h3>
 
 
 
